--- a/src/components/Map/MkraanCrystalProgress/MkraanCrystalProgress.module.scss
+++ b/src/components/Map/MkraanCrystalProgress/MkraanCrystalProgress.module.scss
@@ -1,9 +1,9 @@
 .num {
   font-family: "Imaginary Friend";
-  font-size: 32;
+  font-size: 32px;
   fill: white;
   stroke: black;
   stroke-width: 5;
   paint-order: stroke;
-  filter: drop-shadow(0 3 0 black);
+  filter: drop-shadow(0 3px 0 black);
 }
