--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300.900&display=swap");
 
 @font-face {
   font-family: "Amboy";
-  src: url("../assets/fonts/Amboy-Black.woff2") format("woff2"),
-    url("../assets/fonts/Amboy-Black.woff") format("woff");
+  src: url("./assets/fonts/Amboy-Black.woff2") format("woff2"),
+    url("./assets/fonts/Amboy-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -11,8 +11,8 @@
 
 @font-face {
   font-family: "American Captain";
-  src: url("../assets/fonts/AmericanCaptain.woff2") format("woff2"),
-    url("../assets/fonts/AmericanCaptain.woff") format("woff");
+  src: url("./assets/fonts/AmericanCaptain.woff2") format("woff2"),
+    url("./assets/fonts/AmericanCaptain.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -20,8 +20,8 @@
 
 @font-face {
   font-family: "Imaginary Friend";
-  src: url("../assets/fonts/ImaginaryFriend.woff2") format("woff2"),
-    url("../assets/fonts/ImaginaryFriend.woff") format("woff");
+  src: url("./assets/fonts/ImaginaryFriend.woff2") format("woff2"),
+    url("./assets/fonts/ImaginaryFriend.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
