--- a/src/components/GameSetup/GameSetupFooter/GameSetupFooter.module.scss
+++ b/src/components/GameSetup/GameSetupFooter/GameSetupFooter.module.scss
@@ -54,7 +54,7 @@
 
 .container {
   padding: 0.5rem 1rem 0.75rem;
-  border-top: 1px dashed #aaa;
+  border-top: $dash-border;
   width: 100%;
   display: flex;
   flex-direction: column;
