--- a/src/components/Drawer/Graveyard/Graveyard.module.scss
+++ b/src/components/Drawer/Graveyard/Graveyard.module.scss
@@ -3,9 +3,34 @@
 .container {
   display: flex;
   width: 100%;
-  padding: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.75rem 1rem 1.25rem;
+}
+
+.left, .right {
+  display: flex;
   flex-direction: column;
-  gap: 0.125rem;
+}
+
+.left {
+  gap: 0.5rem;
+}
+
+.right {
+  gap: 0.75rem;
+}
+
+.right > span {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-family: Amboy;
+  color: $dark-blue;
+
+  & > img {
+    height: 2.5rem;
+  }
 }
 
 .recover {
