--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0 5px 3px rgb(0 0 0 / 0.3);
 }
 
 .scoreAndSpecialContainer {
