--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,12 +1,15 @@
 .debug {
   position: fixed;
-  padding: 0.5rem;
-  background: rgb(255 255 255 / 0.9);
+  padding: 1rem;
   border-radius: 0.5rem;
-  top: 1rem;
+  background: white;
+  color: #333;
+  bottom: 1rem;
   left: 1rem;
-  // pointer-events: none;
-  color: black;
-  max-height: calc(100vh - 2rem);
-  overflow-y: scroll;
+  font-family: monospace;
+  opacity: 0.6;
+
+  &:hover {
+    opacity: 1;
+  }
 }
