--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,9 +7,5 @@
   bottom: 1rem;
   left: 1rem;
   font-family: monospace;
-  opacity: 0.6;
-
-  &:hover {
-    opacity: 1;
-  }
+  transition: opacity 0.2s ease;
 }
