--- a/src/components/GameSetup/GameSetupHeader/GameSetupHeader.module.scss
+++ b/src/components/GameSetup/GameSetupHeader/GameSetupHeader.module.scss
@@ -2,15 +2,28 @@
 
 .container {
   display: flex;
-  flex-direction: column;
   width: 100%;
   padding: 0.5rem 0.75rem;
   border-bottom: $dash-border;
+  gap: 0.75rem;
+  align-items: center;
+}
+
+.innerContainer {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.title {
+  color: $dark-blue;
+  font-family: Amboy;
+  font-size: 1.125rem;
 }
 
 .subtitle {
   font-family: Amboy;
-  align-self: flex-end;
   color: $light-blue;
   font-size: smaller;
 }
