--- a/src/components/Debugging/Debugging.module.scss
+++ b/src/components/Debugging/Debugging.module.scss
@@ -1,7 +1,19 @@
 .container {
-  background: red;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 1rem;
+  height: 100vh;
 
   & textarea {
     font-family: Figtree;
+    flex-grow: 1;
   }
+}
+
+.btn {
+  font-family: Figtree;
+  padding: 0.25rem 0.5rem;
+  border: none;
+  border-radius: 0.25rem;
 }
