--- a/src/components/Debugging/Debugging.module.scss
+++ b/src/components/Debugging/Debugging.module.scss
@@ -6,8 +6,10 @@
   height: 100vh;
 
   & textarea {
-    font-family: Figtree;
+    font-family: monospace;
     flex-grow: 1;
+    padding: 0.5rem;
+    outline: transparent;
   }
 }
 
