--- a/src/components/Debugging/DebuggingModal/DebuggingModal.module.scss
+++ b/src/components/Debugging/DebuggingModal/DebuggingModal.module.scss
@@ -18,4 +18,5 @@
   border-radius: 0.5rem;
   max-width: min(calc(100vw - 2rem), 800px);
   max-height: min(calc(100vh - 2rem), 600px);
+  overflow-y: scroll;
 }
