--- a/src/components/Debugging/ResourceGrid/ResourceCell.module.scss
+++ b/src/components/Debugging/ResourceGrid/ResourceCell.module.scss
@@ -1,5 +1,13 @@
 .cell {
   position: relative;
-  height: 1rem;
-  width: 3rem;
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.375rem;
+  background: #ddd;
+  border-radius: 0.25rem;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+  font-family: monospace;
+  font-size: 1rem;
 }
