--- a/src/components/Debugging/ResourceGrid/ResourceGrid.module.scss
+++ b/src/components/Debugging/ResourceGrid/ResourceGrid.module.scss
@@ -1,5 +1,8 @@
 .container {
   margin-inline: 3rem;
   display: grid;
-  grid-template-rows: repeat(auto-fill);
+  grid-template-rows: repeat(auto-fill, 2rem);
+  grid-template-columns: repeat(auto-fill, 10rem);
+  gap: 0.5rem;
+  justify-content: center;
 }
