--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -23,3 +23,20 @@
   display: flex;
   flex-direction: column;
 }
+
+.version {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  background: white;
+  color: #222;
+  font-family: monospace;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.375rem;
+  opacity: 0.6;
+  transition: 0.2s ease;
+
+  &:hover {
+    opacity: 1;
+  }
+}
