--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,15 +1,97 @@
 .container {
-  --radius: 0.375rem;
+  --radius: 1rem;
   position: fixed;
   top: 5rem;
   left: 2rem;
   border-radius: var(--radius);
+
+  & * {
+    font-family: Figtree;
+  }
+}
+
+.cancelIcon {
+  height: calc(100% - 0.625rem);
+  fill: white;
+}
+
+.magnifyingIcon {
+  height: 100%;
+  fill: #333;
+}
+
+.cancelContainer {
+  --margin: 0.375rem;
+  left: var(--margin);
+  background: #aaa;
+  transition: opacity 0.2s ease;
+}
+
+.magnifyingContainer {
+  --margin: 0.5rem;
+  right: var(--margin);
+  background: none;
+}
+
+.cancelContainer,
+.magnifyingContainer {
+  aspect-ratio: 1 / 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: var(--margin);
+  height: calc(100% - 2 * var(--margin));
+  border-radius: 999px;
+  border: none;
+  outline: transparent;
+  cursor: pointer;
 }
 
 .dropdown {
-  background: white;
-  color: #222;
-  padding: 0.25rem 0.5rem 0.75rem;
+  position: relative;
   border-radius: 0 0 var(--radius) var(--radius);
+  display: flex;
+  flex-direction: column;
+  max-height: 200px;
+  overflow-y: scroll;
+  border: 1px solid #eee;
+  border-top: none;
+}
+
+.option {
   font-family: Figtree;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  background: #2a2830;
+  color: #eee;
+  font-size: 0.825rem;
+
+  &:last-child {
+    padding-bottom: 0.75rem;
+  }
+}
+
+.hoverOption {
+  background: #423e4d;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.input {
+  background: #eee;
+  color: #222;
+  border: none;
+  outline: transparent;
+  padding-block: 0.5rem;
+  width: min(300px, calc(100vh - 2rem));
+  border-radius: var(--radius) var(--radius) 0 0;
+  transition: border-radius 0.1s ease, padding 0.2s ease, width 0.2s ease;
+}
+
+.inputContainer {
+  position: relative;
+  height: 2rem;
 }
