--- a/src/components/Debugging/DebuggingModal/DebuggingModal.module.scss
+++ b/src/components/Debugging/DebuggingModal/DebuggingModal.module.scss
@@ -19,6 +19,10 @@
   max-width: min(calc(100vw - 2rem), 800px);
   max-height: min(calc(100vh - 2rem), 600px);
   overflow-y: scroll;
+
+  & * {
+    caret-color: transparent;
+  }
 }
 
 .red {
